--- a/client/main/variableeditor.css
+++ b/client/main/variableeditor.css
@@ -47,7 +47,7 @@
 .jmv-variable-editor-main {
     position: relative ;
     margin: 0 auto ;
-    width: 700px ;
+    width: 800px ;
     height: 100% ;
     box-sizing: border-box;
     overflow: hidden ;
